--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@types/d3": "^7.4.3",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
+    "lucide-react-native": "^0.525.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-spring": "^10.0.1",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1"
   },
